# MutsukiPythonRunnerKit

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/mutsuki-python-runner-kit/: SKILL.md
.github/workflows/: performance-smoke.yml  platform-compat.yml
artifacts/perf/: issue2-runtime-wire.json  issue30-final-python-wire.json  issue30-p0-python-wire.json  issue30-p1-python-wire.json  issue30-p2-python-wire.json
artifacts/performance/reference-windows-x64/: report-analysis.json  report.approval.json  report.json
benchmarks/: fixture_process.py  p1_cases.py  performance_model.py  pipe_client.py  run_p0.py  run_p1.py  wire_benchmark.py  wire_report.py
docs/performance/: performance-model-v1.md  runtime-wire-v1.md
plans/: repository-boundary.md  runner-link-v1.md
skills/conformance-testing/: SKILL.md
skills/contract-mirror/: SKILL.md
skills/runner-backend/: SKILL.md
skills/transport-resource/: SKILL.md
src/mutsuki_runner_kit/: __init__.py
src/mutsuki_runner_kit/contracts/: __init__.py  batch.py  codec.py  effect.py  entry.py  errors.py  event.py  extension.py  observability.py  plugin.py  runner.py  (+5 more)
tests/: test_async_adapter.py  test_backend.py  test_benchmark_runners.py  test_contracts_batch.py  test_contracts_event.py  test_contracts_plugin.py  test_contracts_resource.py  test_contracts_surface.py  test_contracts_task_runner.py  test_contracts_validation.py  test_no_legacy_import.py  test_performance_model.py  test_resource.py  test_scalar_adapter.py  test_stdio.py  test_wire_binary.py  test_wire_negotiation.py  test_wire_schema.py
(+31 files in other folders)
